<resources>
    <string name="app_name">MMKuNyi-App-Assignment-ZHN</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="request_information_title">Your Information</string>
    <string name="no_account_navigation">Don\'t have an account yet?</string>
    <string name="forgot_password_navigation">Forgot Password?</string>
    <string name="sign_in_with_email_text">Sign In With Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email Address</string>
    <string name="not_facebook_or_google">or sign in with your email</string>
    <string name="facebook_log_in_button_text">Facebook</string>
    <string name="google_log_in_button_text">Google</string>
    <string name="age_hint">Age</string>
    <string name="skills_hint">Skills</string>
    <string name="experiences_hint">Experiences</string>
    <string name="submit_text">Submit</string>
    <string name="register_toolbar_title">Create an Account</string>
    <string name="register_name_hint">What is your name?</string>
    <string name="register_email_hint">Email Address</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_text">Register</string>
    <string name="job_list_toolbar_title">Available Jobs</string>
    <string name="apply_button">Apply</string>
    <string name="save_button">Save</string>
    <string name="title_activity_job_details">Map</string>
    <string name="job_title_label">Job Title    :</string>
    <string name="job_location_label">Location  :</string>
    <string name="job_payment_label">Payment    :</string>
    <string name="job_period">Period    </string>
    <string name="job_vacancy_label">Vacancy    :</string>
    <string name="job_requirements_title">Requirements</string>
    <string name="job_description_title">Job Description</string>
    <string name="job_details_important_notes">***Important***</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_chat">Chat</string>
    <string name="menu_item_about_us">About Us</string>
    <string name="persons_applied_for_this_job_title">Persons applied for this job</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="about_me_label">About Me</string>
    <string name="profile_gender_label">Gender</string>
</resources>
