<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView style="@style/backdrop_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium_2">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterName"
                style="@style/register_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRegisterName"
                    style="@style/register_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_name_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterEmail"
                style="@style/register_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterName">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRegisterEmail"
                    style="@style/register_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterPassword"
                style="@style/register_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterEmail">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etRegisterPassword"
                    style="@style/register_password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilRegisterConfirmPassword"
                style="@style/register_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilRegisterPassword">

                <android.support.design.widget.TextInputEditText
                    style="@style/register_password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_confirm_password_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/btnRegister"
                style="@style/sign_in_and_submit_button_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_submit_button_height"
                android:layout_below="@id/tilRegisterConfirmPassword">

                <TextView
                    style="@style/sign_in_and_submit_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/btnAlreadyLoggedIn"
                style="@style/login_reminders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnRegister"
                android:text="Already Logged In?" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>