<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView style="@style/backdrop_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_medium_2"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/llLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLoginTitle"
                    style="@style/login_title_text"
                    android:text="J" />

                <ImageView
                    android:id="@+id/ivMagnifyingGlass"
                    android:layout_width="@dimen/magnifying_glass_size"
                    android:layout_height="@dimen/magnifying_glass_size"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:src="@drawable/magnifying_glass" />

                <TextView
                    style="@style/login_title_text"
                    android:text="BS" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFacebookAndGoogleSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llLoginTitle"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    style="@style/login_btn_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/margin_small">

                    <Button
                        android:id="@+id/btnFacebookLogin"
                        style="@style/login_btn_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_facebook"
                        android:text="@string/facebook_log_in_button_text" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    style="@style/login_btn_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/margin_small">

                    <Button
                        android:id="@+id/btnGoogleLogin"
                        style="@style/login_btn_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_google"
                        android:text="@string/google_log_in_button_text" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/tvNotFacebookOrGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llFacebookAndGoogleSignIn"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily=""
                android:text="@string/not_facebook_or_google"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/text_regular_2x" />

            <View
                style="@style/login_divider"
                android:layout_alignTop="@id/tvNotFacebookOrGoogle"
                android:layout_marginRight="@dimen/margin_medium_2"
                android:layout_toLeftOf="@id/tvNotFacebookOrGoogle" />

            <View
                style="@style/login_divider"
                android:layout_alignTop="@id/tvNotFacebookOrGoogle"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_toRightOf="@id/tvNotFacebookOrGoogle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLoginEmail"
                style="@style/login_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNotFacebookOrGoogle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    style="@style/login_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLoginPassword"
                style="@style/login_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilLoginEmail">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    style="@style/login_password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/btnSignInWithEmail"
                style="@style/sign_in_and_submit_button_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_submit_button_height"
                android:layout_below="@id/tilLoginPassword">

                <TextView
                    style="@style/sign_in_and_submit_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_with_email_text" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tvForgotPassword"
                style="@style/login_reminders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignInWithEmail"
                android:text="@string/forgot_password_navigation" />

            <TextView
                android:id="@+id/tvNoAccount"
                style="@style/login_reminders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/btnSignInWithEmail"
                android:text="@string/no_account_navigation" />

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>