<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RequestInformationActivity">

    <ImageView style="@style/backdrop_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium_2">

            <TextView
                android:id="@+id/tvRequestInformationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="monospace"
                android:text="@string/request_information_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_heading_2x" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPhoneNumber"
                style="@style/request_information_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRequestInformationTitle"
                android:layout_marginTop="@dimen/margin_xlarge">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/request_information_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilAge"
                style="@style/request_information_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilPhoneNumber">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etAge"
                    style="@style/request_information_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilAge"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:orientation="horizontal">


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white"
                    android:text="Male"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_regular_3x" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium_2"
                    android:buttonTint="@android:color/white"
                    android:text="Female"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_regular_3x" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSkills"
                style="@style/request_information_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rgGender"
                android:layout_marginTop="@dimen/margin_medium_3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etSkills"
                    style="@style/request_information_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/skills_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilExperiences"
                style="@style/request_information_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilSkills">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etExperiences"
                    style="@style/request_information_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/experiences_hint" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/btnRequestInformationSubmit"
                style="@style/sign_in_and_submit_button_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_submit_button_height"
                android:layout_below="@id/tilExperiences">

                <TextView
                    android:id="@+id/tvRequestInformationSubmit"
                    style="@style/sign_in_and_submit_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_text" />


            </android.support.v7.widget.CardView>


        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>